--- a/Graeshoppe/flutterproject/pubspec.yaml
+++ b/Graeshoppe/flutterproject/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
 
   intl: ">=0.14.0"
+  badges: ^1.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
