--- a/sample2/pubspec.yaml
+++ b/sample2/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sample2
+name: sample
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
