--- a/restaurant/pubspec.yaml
+++ b/restaurant/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
     - assets/pizza2.jpg
     - assets/chickenhut.jpg
     - assets/PAPA.jpg
+    - assets/wang.jpg
     
 
   # An image asset can refer to one or more resolution-specific "variants", see
