--- a/Graeshoppe/flutterproject/pubspec.yaml
+++ b/Graeshoppe/flutterproject/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_rating_bar: ^3.0.1+1
+  
   flutter:
     sdk: flutter
 
@@ -57,6 +59,7 @@ flutter:
     - assets/wang.jpg
     - assets/profile.png
     - assets/img.png
+    - assets/soup.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
