--- a/sample2/android/app/src/main/AndroidManifest.xml
+++ b/sample2/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="sample2"
+        android:label="Costomer App v.0.1"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
