--- a/sample2/pubspec.yaml
+++ b/sample2/pubspec.yaml
@@ -48,7 +48,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assests/robocop.jpg
+    - assests/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
