--- a/enewspaper/pubspec.yaml
+++ b/enewspaper/pubspec.yaml
@@ -49,7 +49,7 @@ flutter:
   assets:
     - assets/images/splash_1.png
     - assets/images/splash_2.png
-    - assets/images/splash_3.png
+    - assets/images/pic1.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
