http://34.87.37.122:8080/browse/IN-17207

--- a/enewspaper/pubspec.yaml
+++ b/enewspaper/pubspec.yaml
@@ -51,6 +51,10 @@ flutter:
     - assets/images/splash_1.png
     - assets/images/splash_2.png
     - assets/images/pic1.jpg
+    - assets/images/noImageAvailable.png
+    - assets/images/Image Banner 2.png
+    - assets/images/Image Banner 3.png
+    - assets/images/Sport Banner.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
