http://34.87.37.122:8080/browse/IN-17584

--- a/enewspaper/pubspec.yaml
+++ b/enewspaper/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
     - assets/images/Technology.jpg
     - assets/images/TheHansIndia.jpg
     - assets/images/waiting.png
+    - assets/images/noimg.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
