--- a/recharge_app/pubspec.yaml
+++ b/recharge_app/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   splashscreen: ^1.3.5
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
