--- a/recharge_app/pubspec.yaml
+++ b/recharge_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   contacts_service: ^0.6.1
   permission_handler: ^8.1.4+2
   dio: ^4.0.0
+  build_runner: ^2.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,6 +62,7 @@ flutter:
     - assets/images/BSNL.png
     - assets/images/Jio_logo.png
     - assets/images/Vi_logo.png
+    - assets/json/vidata.json
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
