http://34.87.37.122:8080/browse/IN-18168

--- a/recharge_app/pubspec.yaml
+++ b/recharge_app/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/images/BSNL.png
     - assets/images/Jio_logo.png
     - assets/images/Vi_logo.png
+    - assets/images/PayitLogo.png
     - assets/json/vidata.json
   
 
