--- a/recharge_app/pubspec.yaml
+++ b/recharge_app/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   permission_handler: ^8.1.4+2
   dio: ^4.0.0
   build_runner: ^2.1.2
+  email_validator: ^2.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
