--- a/recharge_app/pubspec.yaml
+++ b/recharge_app/pubspec.yaml
@@ -21,35 +21,27 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  build_runner: ^2.1.2
+  contacts_plugin: ^0.0.3
+  contacts_service: ^0.6.1
+  cupertino_icons: ^1.0.2
+  dio: ^4.0.0
+  email_validator: ^2.0.1
   flutter:
     sdk: flutter
-  splashscreen: ^1.3.5
   http: ^0.13.3
-  razorpay_flutter: ^1.2.3
-  toast: ^0.1.5
-  contacts_service: ^0.6.1
   permission_handler: ^8.1.4+2
-  dio: ^4.0.0
-  build_runner: ^2.1.2
-  email_validator: ^2.0.1
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  razorpay_flutter: ^1.2.3
+  splashscreen: ^1.3.5
+  toast: ^0.1.5
   url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  
-  
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -66,14 +58,10 @@ flutter:
     - assets/images/Vi_logo.png
     - assets/images/PayitLogo.png
     - assets/json/vidata.json
-  
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
